--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -28,8 +28,14 @@
 
  .animate-arrow {
     left: 10px;
-    padding: 1px 182px !important;
+    padding: 1px 134px !important;
 
+}
+.numberone,.numbertwo,.numberthree h2 {
+    font-weight: 900;
+    font-size: 20px;
+    padding-top: 2px;
+    margin-bottom: 10px;
 }
 
 /*p, li{
@@ -49,8 +55,9 @@
 }
 
 .home-doctors {
-    padding: 8px 7px 5px 1px;
+    padding: 10px 10px 10px 10px;
     display: inline-block;
+    left: 62px;
 }
 .mob-logo img {
 	width: 183px;
