--- a/styles/mediaqueries.css
+++ b/styles/mediaqueries.css
@@ -38,6 +38,18 @@
     margin-bottom: 10px;
 }
 
+.navbar-toggle {
+   position: relative;
+   float: right;
+   padding: -18px 0px;
+   margin-top: -53px;
+   margin-right: -10px;
+   margin-bottom: 8px;
+   background-color: transparent;
+   background-image: none;
+   border: 1px solid transparent;
+   border-radius: 4px;
+}
 /*p, li{
     margin-right: 9px;
 }*/
